# summit_2025

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ct-ci-cd.yaml
data/: data.csv
k8s/api/: Dockerfile  api.yaml
k8s/experiment/: Dockerfile  kubernetes_config.json  kubernetes_job_template.yaml
k8s/mlflow/: dailyclean.yml  minio.yml  mlflow.yml  mysql.yml
scripts/: install-mlflow.sh  uninstall-mlflow.sh
src/lokilone-dev/: main.py
src/lokilone-dev/api/: infer.py  main.py
src/lokilone-dev/ci/: search_mlflow.py
src/lokilone-dev/training/: MLProject  main.py
src/lokilone-dev/training/steps/: load_data.py  split_train_test.py  train.py  validate.py
workflows/: ct-ci-cd.yaml
